Mise à jour de la page d'acceuil

--- a/index.html
+++ b/index.html
@@ -148,8 +148,20 @@
                             <a class="nav-link active" aria-current="page"
                                 href="./index.html">Accueil</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./about.html">A propos</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#"
+                                role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                A propos
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item"
+                                        href="./about.html">Qui sommes nous?</a>
+                                </li>
+                                <li><a class="dropdown-item" href="#">Garantie</a></li>
+                                <li><a class="dropdown-item" href="#"> Nos partenaires</a></li>
+                                <li><a class="dropdown-item" href="#"> FAQ</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#"
@@ -162,33 +174,34 @@
                                         href="./candidats_disponibles.html">Candidats
                                         disponibles</a>
                                 </li>
-                                <li><a class="dropdown-item" href="#">Another
-                                        action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something
-                                        else here</a></li>
+                                <li><a class="dropdown-item" href="#">Employeurs</a></li>
+                                <li><a class="dropdown-item" href="#">Le Burkina Faso</a></li>
+                                <li><a class="dropdown-item" href="#">Avantages</a></li>
                             </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link">Espace candidats</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#"
                                 role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Nos services
+                                Espace candidats
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another
-                                        action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
+                                <li><a class="dropdown-item"
+                                        href="./candidats_disponibles.html">Candidatures</a>
                                 </li>
-                                <li><a class="dropdown-item" href="#">Something
-                                        else here</a></li>
+                                <li><a class="dropdown-item" href="#">Vivre au Québec</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#"
+                                role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Services
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Recrutement international</a></li>
+                                <li><a class="dropdown-item" href="#">Résidence permanente</a></li>
+                                <li><a class="dropdown-item" href="#">Évaluation</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -198,16 +211,19 @@
                                 Nos métiers
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another
-                                        action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something
-                                        else here</a></li>
+                                <li><a class="dropdown-item" href="#">Administratifs</a></li>
+                                <li><a class="dropdown-item" href="#">Opérations</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link " aria-current="page"
+                                href="./index.html">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " aria-current="page"
+                                href="./index.html">Contact</a>
+                        </li>
+                      
                         <li class="nav-item">
                             <a class="fw-5 shadow btn btn-warning px-4 py-2"
                                 href="./about.html">Recruter des talents</a>
